fixing alignment

--- a/docs/style/menu-style.css
+++ b/docs/style/menu-style.css
@@ -4,14 +4,15 @@ body {
     box-sizing: border-box;
   }
   
-  .container {
+  .my-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #000;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+  
   
   .swiper {
     width: 100%;
